Added the spring-boot-maven-plugin, so that packaging and running becomes easy using maven.

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.4.RELEASE</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -57,17 +62,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.version}</version>
+            <!--version>${spring.boot.version}</version-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-            <version>${spring.boot.version}</version>
+            <!--version>${spring.boot.version}</version-->
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-core</artifactId>
-            <version>${spring.security.version}</version>
+            <!--version>${spring.security.version}</version-->
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
