--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,10 @@
             <version>3.0.6.M4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
