--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.thymeleaf</groupId>
+            <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
-            <version>RELEASE</version>
+            <version>3.0.2.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
