--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ server:
 
 logging:
   level:
-    root: info
+    root: debug
     org.springframework.web: debug
     org.springframework.security: debug
 
@@ -38,16 +38,10 @@ security:
         user-info-converter: "org.springframework.security.oauth2.client.user.converter.UserInfoConverter"
         client-name: TCBL_manager
         client-alias: tcbl-manager
-#      tcbl-test:
-#        client-id: "@!E692.B7C7.C462.7A1D!0001!E03D.8C4F!0008!7826.7E79.0C74.E1B6"
-#        client-secret: averysecrativesecret
-#        client-authentication-method: header
-#        authorized-grant-type: authorization_code
-#        redirect-uri: "https://ravel.elis.ugent.be:8443/oauth2/authorize/code/tcbl_test"
-#        scopes: openid, user_name
-#        authorization-uri: "https://tcblsso2.ilabt.imec.be/oxauth/seam/resource/restv1/oxauth/authorize"
-#        token-uri: "https://tcblsso2.ilabt.imec.be/oxauth/seam/resource/restv1/oxauth/token"
-#        user-info-uri: "https://tcblsso2.ilabt.imec.be/oxauth/seam/resource/restv1/oxauth/userinfo"
-#        user-info-converter: "org.springframework.security.oauth2.client.user.converter.UserInfoConverter"
-#        client-name: TCBL_manager_test
-#        client-alias: tcbl-manager-test
+  scim:
+    domain: "https://honegger.elis.ugent.be/identity/seam/resource/restv1"
+    meta-data-url: "https://honegger.elis.ugent.be/.well-known/uma-configuration"
+    aat-client-id: "@!4F1B.EBA3.75E2.F47A!0001!EF35.6902!0008!224B.6C55"
+    aat-client-jks-path: "/home/ghaesen/projects/TCBL/config/scim-rp-honegger.jks"
+    aat-client-jks-password: secret
+    aat-client-key-id:
