--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -23,6 +23,20 @@ logging:
 spring:
   thymeleaf:
     cache: false
+  mail:
+    host: smtp.ugent.be
+    port: 465
+    username: yourusernameoremail
+    password: yourpassword
+    test-connection: true
+    properties:
+      mail:
+        smtp:
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
+          ssl:
+            enable: true
 
 security:
   oauth2:
