--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -51,8 +51,8 @@ security:
         scopes: openid, inum
         authorization-uri: "https://honegger.elis.ugent.be/oxauth/seam/resource/restv1/oxauth/authorize"
         token-uri: "https://honegger.elis.ugent.be/oxauth/seam/resource/restv1/oxauth/token"
+        jwk-set-uri: "https://honegger.elis.ugent.be/oxauth/seam/resource/restv1/oxauth/jwks"
         user-info-uri: "https://honegger.elis.ugent.be/oxauth/seam/resource/restv1/oxauth/userinfo"
-        user-info-converter: org.springframework.security.oauth2.client.user.converter.UserInfoConverter
         client-name: TCBL_manager
         client-alias: tcbl-manager
   scim:
