Fix template paths for jarred version. See https://github.com/spring-projects/spring-boot/issues/1744.

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -23,6 +23,7 @@ logging:
 spring:
   thymeleaf:
     cache: false
+    prefix: classpath:/templates
   mail:
     host: smtp.ugent.be
     port: 465
