--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
         <!-- Spring Boot, to minimalise and ease configuration -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
