--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -12,6 +12,13 @@ server:
     key-store-password: secret
     key-store-type: PKCS12
     key-alias: tudm
+  ajp:
+      port: 8445
+      scheme: https
+      proxy-name: ravel.elis.ugent.be
+      proxy-port: 443
+      secure: true
+
 
 logging:
   level:
