--- a/pom.xml
+++ b/pom.xml
@@ -151,5 +151,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
