Simplified mailing by creating a background mail service

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -69,6 +69,7 @@ spring:
     username: yourusernameoremail
     password: yourpassword
     test-connection: true
+    from: "no-reply@ilabt.iminds.be"
     properties:
       mail:
         smtp:
