--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.0.0.M3</spring.boot.version>
-        <spring.security.version>5.0.0.BUILD-SNAPSHOT</spring.security.version>  <!-- The latest release does not offer OpenID Connect, so we need this Milestone version-->
+        <spring.security.version>5.0.0.M4</spring.security.version>  <!-- The latest release does not offer OpenID Connect, so we need this Milestone version-->
         <scim.client.version>3.0.2</scim.client.version>             <!-- Must be the same as the Gluu server version -->
         <java.version>1.8</java.version>
     </properties>
@@ -59,15 +59,6 @@
             </snapshots>
         </repository>
 
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/libs-snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-
         <!-- Gluu software repo -->
         <repository>
             <id>gluu</id>
@@ -95,13 +86,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-
-        <!-- This is neede because we hacked the Nimbus OAuth2 code -->
-        <!--dependency>
-            <groupId>com.nimbusds</groupId>
-            <artifactId>oauth2-oidc-sdk</artifactId>
-            <version>5.34</version>
-        </dependency-->
 
         <!-- Spring Security offers a security framework so we don't need to write too much code -->
         <dependency>
