Update to application.yml.dist (changes in either/or section to avoid defining port when using ajp); Update to README.md to cope with self-signed gluu certificates (interesting while developing)

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -2,7 +2,7 @@
 #
 # This is a sample configuration.
 # Copy it into your application.yml, adapt to your needs and place it where the application will read it:
-# - in this directory (when running from maven or from your IDE)
+# - in the project directory (when running from maven or from your IDE)
 # - in your working directory, next to the built jar file (when starting the jar file from the command line).
 #
 ####
@@ -11,10 +11,11 @@
 # Tomcat server settings
 ##
 server:
+  # --- Enable EITHER 'port' and 'ssl' OR 'ajp'
+
   # HTTP connector port
   port: 8443
 
-  # -- either
   # SSL settings for HTTP connector. Only enable if tomcat has to handle https requests.
   ssl:
     # contains the TLS certificate to use
@@ -23,16 +24,15 @@ server:
     key-store-type: PKCS12
     key-alias: tudm
 
-  # -- or
   # Settings for AJP connector (in stead of HTTP connector). Used if running behind Apache HTTP server that acts as reverse proxy.
   # If these properties are set, the HTTP connector settings are not relevant anymore.
   # See https://tomcat.apache.org/tomcat-8.5-doc/config/ajp.html for explanation of properties
-  ajp:
-    port: 8445
-    scheme: https
-    proxy-name: ravel.elis.ugent.be
-    proxy-port: 8443
-    secure: true
+  #ajp:
+  #  port: 8445
+  #  scheme: https
+  #  proxy-name: ravel.elis.ugent.be
+  #  proxy-port: 8443
+  #  secure: true
 
   servlet:
     # set this if your content will be served from a certain path in stead of the root
