Update documentation and application.yml.dist for defining server.port even when using ajp

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -11,12 +11,10 @@
 # Tomcat server settings
 ##
 server:
-  # --- Enable EITHER 'port' and 'ssl' OR 'ajp'
-
-  # HTTP connector port
+  # --- HTTP connector port
   port: 443
 
-  # SSL settings for HTTP connector. Only enable if tomcat has to handle https requests.
+  # --- SSL settings for HTTP connector. Enable only if tomcat has to handle https requests.
   ssl:
     # contains the TLS certificate to use
     key-store: /home/ghaesen/projects/TCBL/config/tudm.jks
@@ -24,8 +22,9 @@ server:
     key-store-type: PKCS12
     key-alias: tudm
 
-  # Settings for AJP connector (in stead of HTTP connector). Used if running behind Apache HTTP server that acts as reverse proxy.
-  # If these properties are set, the HTTP connector settings are not relevant anymore.
+  # --- Settings for AJP connector (in stead of HTTP connector). Enable only if running behind Apache HTTP server that acts as reverse proxy.
+  # If these properties are set, the HTTP connector settings above are not relevant anymore,
+  # except for server.port, which will be in use anyway, so set it to a free port number (such as 8444)!!!!!
   # See https://tomcat.apache.org/tomcat-8.5-doc/config/ajp.html for explanation of properties
   #ajp:
   #  port: 8445
@@ -61,10 +60,8 @@ spring:
 
   # template engine settings. See http://www.thymeleaf.org/
   thymeleaf:
-    # test environment:
+    # --- cache: false for test environment; true for production environment
     cache: false
-    # production environment:
-    # cache: true
     # this prefix setting has to do with https://github.com/spring-projects/spring-boot/issues/1744 !
     prefix: classpath:/templates
 
