--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Gluu SCIM client, for managing users and groups on the Gluu Server -->
         <dependency>
             <groupId>gluu.scim.client</groupId>
