--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -114,3 +114,30 @@ security:
     aat-client-jks-path: /home/ghaesen/projects/TCBL/config/scim-rp-honegger.jks
     aat-client-jks-password: secret
     aat-client-key-id:
+
+##
+# TCBL User Data Manager application specific settings
+##
+tudm:
+  tcbl-services:
+    # srvLinks* entries below are lists; per list element:
+    #   text:  text to display
+    #   url:   destination url
+    #   style: display style: main|zine|labs|asp(=default)
+
+    # services from the TCBL consortium
+    srvLinksTCBL:
+      - text: "Main TCBL website"
+        url: https://tcbl.eu/
+        style: main
+      - text: "_ZINE, the TCBL magazine"
+        url: https://zine.tcbl.eu/
+        style: zine
+      - text: "TCBL Labs platform"
+        url: "https://labs.tcbl.eu/"
+        style: labs
+    # services from the Associated Service Providers
+    srvLinksASP:
+      - text: "Thela"
+        url: "https://thela.cleviria.it/"
+
