--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -120,24 +120,5 @@ security:
 ##
 tudm:
   tcbl-services:
-    # srvLinks* entries below are lists; per list element:
-    #   text:  text to display
-    #   url:   destination url
-    #   style: display style: main|zine|labs|asp(=default)
-
-    # services from the TCBL consortium
-    srvLinksTCBL:
-      - text: "Main TCBL website"
-        url: https://tcbl.eu/
-        style: main
-      - text: "_ZINE, the TCBL magazine"
-        url: https://zine.tcbl.eu/
-        style: zine
-      - text: "TCBL Labs platform"
-        url: "https://labs.tcbl.eu/"
-        style: labs
-    # services from the Associated Service Providers
-    srvLinksASP:
-      - text: "Thela"
-        url: "https://thela.cleviria.it/"
-
+    # name of the json file containing the descriptions of the TCBL services
+    filename: services.json
