--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M3</version>
+        <version>2.0.0.M6</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.security.version>5.0.0.M4</spring.security.version>  <!-- The latest release does not offer OpenID Connect, so we need this Milestone version-->
+        <spring.security.version>5.0.0.RELEASE</spring.security.version>  <!-- The latest release does not offer OpenID Connect, so we need this Milestone version-->
         <scim.client.version>3.0.2</scim.client.version>             <!-- Must be the same as the Gluu server version -->
         <java.version>1.8</java.version>
     </properties>
@@ -94,7 +94,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt-jose</artifactId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
             <version>${spring.security.version}</version>
         </dependency>
         <dependency>
