Fixed the logging problem. Now it runs, has to be tested though.

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.4.RELEASE</version>
+                <!--version>1.5.4.RELEASE</version-->
             </plugin>
 
             <plugin>
@@ -66,6 +66,13 @@
         </repository>
     </repositories>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <dependencies>
 
         <!-- Spring Boot, to minimalise and ease configuration -->
@@ -84,6 +91,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
         <!-- Spring Security offers a security framework so we don't need to write too much code -->
@@ -157,6 +178,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- fix log4j over slf4j-->
+        <!--dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>1.7.25</version>
+        </dependency-->
 
         <!-- testing -->
         <dependency>
