Added a link to the privacy policy URL in the forms and made it configurable in application.yml

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -120,3 +120,5 @@ tudm:
   tcbl-services:
     # name of the json file containing the descriptions of the TCBL services
     filename: services.json
+  # url of the webpage containing the TCBL privacy declaration
+  tcbl-privacy-url: "https://tcbl.eu/about"
