--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -120,3 +120,10 @@ tudm:
   tcbl-services:
     # name of the json file containing the descriptions of the TCBL services
     filename: services.json
+
+##
+# MailChimp settings.
+##
+mailchimp:
+  # name of the properties file containing the API key and the list id
+  filename: mailchimp.properties
