--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>be.ugent.idlab.tcbl</groupId>
     <artifactId>UserDataManager</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    <version>4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>UserDataManager</name>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M7</version>
+        <version>2.0.0.RELEASE</version>
     </parent>
 
     <properties>
@@ -178,13 +178,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!-- fix log4j over slf4j-->
-        <!--dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.25</version>
-        </dependency-->
 
         <!-- testing -->
         <dependency>
