--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
-            <version>3.0.6.M4</version>
+            <version>3.0.9.RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
