Changed vital property :)

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -111,7 +111,7 @@ spring:
   # database config
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     url: "jdbc:mysql://localhost:3306/usermanager"
     username: tcbluser
