Update application.yml.dist and README.md for final privacy policy URL.

--- a/src/main/resources/application.yml.dist
+++ b/src/main/resources/application.yml.dist
@@ -138,7 +138,7 @@ tudm:
     filename: services.json
 
   # url of the webpage containing the TCBL privacy declaration
-  tcbl-privacy-url: "https://tcbl.eu/about"
+  tcbl-privacy-url: "https://tcbl.eu/privacy"
 
   # should we copy the user data from the Gluu server to the local database at boot-time? Set this to false unless
   # this is necessary for some reason.
